--- a/index.html
+++ b/index.html
@@ -1,21 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-<meta charset="UTF-8">
-<title>Page Title</title>
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<link rel="stylesheet" href="">
-<style>
-</style>
-<script src=""></script>
+<head>
+    <meta charset="UTF-8">
+    <title>My Personal Website</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="phtograph.html">Photograph</a></li>
+            <li><a href="cuisine.html">Favorite Cuisine</a></li>
+            <li><a href="Traveling.html">My Fravorite Place </a></li>
+        </ul>
+    </nav>
 
+    <h1>Welcome to My Personal Website</h1>
+    <h2>About Me</h2>
+    <p>Hello, my name is Meng Chen. I am a Junior student in University of Wiscosin Madison. Through this website, I want to introduce three parts that are very important to me. I like taking pictures very much, so I put a lot of my own photos in the web page. And I also shared some delicious food and my travels</p>
 
-	<!--- Code above this line will not be displayed on the browser --> 
+    <img src="1231709958155_.pic_hd.jpg" width="600" height="600">
 
-	<body>
-
-		<p> Hello world!</p>
-		<p> “My name is Meng Chen.”</p>
-
-	</body>
-
+    <footer>
+        <p>&copy; Meng Chen</p>
+    </footer>
+</body>
 </html>
